--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@alonfalsing/realloop": "^0.11.7",
     "@types/node": "^17.0.34",
-    "dotenv": "^16.0.1",
+    "axios": "^0.27.2",
+    "commander": "^9.4.0",
     "ethers": "^5.6.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
