--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "ethers": "^5.6.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "scripts": {
+    "r": "ts-node index.ts"
   }
 }
